rust_writer_procedural/tests/ui/compile_fail/impl_mutator_fails_if_struct_not_visit_mut.rs
// SPDX-License-Identifier: GPL-3.0

use rust_writer_procedural::impl_mutator;

#[impl_mutator]
#[derive(Debug)]
struct SomeStruct {
	mutated: [bool; 1],
}

fn main() {}
