rust_writer_procedural/tests/ui/compile_fail/impl_mutator_fails_if_struct_not_visit_mut.stderr
error[E0599]: no method named `visit_file_mut` found for struct `SomeStruct` in the current scope
 --> tests/ui/compile_fail/impl_mutator_fails_if_struct_not_visit_mut.rs:5:1
  |
5 | #[impl_mutator]
  | ^^^^^^^^^^^^^^^ method not found in `SomeStruct`
6 | #[derive(Debug)]
7 | struct SomeStruct {
  | ----------------- method `visit_file_mut` not found for this struct
  |
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following trait defines an item `visit_file_mut`, perhaps you need to implement it:
          candidate #1: `VisitMut`
  = note: this error originates in the attribute macro `impl_mutator` (in Nightly builds, run with -Z macro-backtrace for more info)
